# openapi.yaml
@@ -1,8 +1,19 @@
 openapi: 3.0.0
 paths:
-  /api/v4/ping:
+  /:
     get:
-      operationId: PingSend
+      operationId: AppHome
+      parameters: []
+      responses:
+        "200":
+          description: ""
+        "302":
+          description: Redirects to the API documentation.
+      tags: &a1
+        - default
+  /ping:
+    get:
+      operationId: AppPing
       summary: ""
       description: >-
         # Health check endpoint<br>
@@ -17,19 +28,13 @@ paths:
       parameters: []
       responses:
         "200":
-          description: ""
+          description: Pong
+          example: pong
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Ping"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AxiosErrorDto"
-      tags:
-        - ping
+                type: string
+      tags: *a1
   /api/v4/auth/login:
     get:
       operationId: AuthLogin
@@ -39,25 +44,25 @@ paths:
           description: ""
         "302":
           description: Redirects to the AuthSch login page.
-        "401": &a1
+        "401": &a2
           description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AxiosErrorDto"
-        "403": &a2
+        "403": &a3
           description: Forbidden
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AxiosErrorDto"
-        "500": &a3
+        "500": &a4
           description: Internal Server Error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AxiosErrorDto"
-      tags: &a4
+      tags: &a5
         - auth
   /api/v4/auth/callback:
     get:
@@ -72,10 +77,10 @@ paths:
           description: ""
         "302":
           description: Redirects to the frontend and sets cookie with JWT.
-        "401": *a1
-        "403": *a2
-        "500": *a3
-      tags: *a4
+        "401": *a2
+        "403": *a3
+        "500": *a4
+      tags: *a5
   /api/v4/auth/logout:
     get:
       operationId: AuthLogout
@@ -85,10 +90,10 @@ paths:
           description: ""
         "302":
           description: Redirects to the frontend and clears the JWT cookie.
-        "401": *a1
-        "403": *a2
-        "500": *a3
-      tags: *a4
+        "401": *a2
+        "403": *a3
+        "500": *a4
+      tags: *a5
   /api/v4/auth/me:
     get:
       operationId: AuthMe
@@ -100,10 +105,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserDto"
-        "401": *a1
-        "403": *a2
-        "500": *a3
-      tags: *a4
+        "401": *a2
+        "403": *a3
+        "500": *a4
+      tags: *a5
   /api/v4/group:
     post:
       operationId: GroupCreate
@@ -121,25 +126,25 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GroupDto"
-        "401": &a5
+        "401": &a6
           description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AxiosErrorDto"
-        "403": &a6
+        "403": &a7
           description: Forbidden
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AxiosErrorDto"
-        "500": &a7
+        "500": &a8
           description: Internal Server Error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AxiosErrorDto"
-      tags: &a8
+      tags: &a9
         - group
     get:
       operationId: GroupFindAll
@@ -165,10 +170,10 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/GroupListItemDto"
-        "401": *a5
-        "403": *a6
-        "500": *a7
-      tags: *a8
+        "401": *a6
+        "403": *a7
+        "500": *a8
+      tags: *a9
   /api/v4/group/{id}:
     get:
       operationId: GroupFindOne
@@ -185,10 +190,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GroupDto"
-        "401": *a5
-        "403": *a6
-        "500": *a7
-      tags: *a8
+        "401": *a6
+        "403": *a7
+        "500": *a8
+      tags: *a9
     put:
       operationId: GroupUpdate
       parameters:
@@ -210,10 +215,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GroupDto"
-        "401": *a5
-        "403": *a6
-        "500": *a7
-      tags: *a8
+        "401": *a6
+        "403": *a7
+        "500": *a8
+      tags: *a9
     delete:
       operationId: GroupRemove
       parameters:
@@ -227,10 +232,10 @@ paths:
           description: ""
         "204":
           description: Delete group
-        "401": *a5
-        "403": *a6
-        "500": *a7
-      tags: *a8
+        "401": *a6
+        "403": *a7
+        "500": *a8
+      tags: *a9
 info:
   title: PÉK API
   description: Profiles and Groups
@@ -337,13 +342,6 @@ components:
       required:
         - response
         - status
-    Ping:
-      type: object
-      properties:
-        ping:
-          type: string
-      required:
-        - ping
     UserDto:
       type: object
       properties:
